site/scdl/menus-collectifs/0.5.0/CHANGELOG.md
<MenuSchema />

<MenuSchema />

# Changelog

## 0.5

* ajout de la valeur "tous" pour le type de convive
* ajout d'un champ menuRegimePlat permettant de préciser l'utilisation du champ menuPrecisionPlat
* ajout d'un champ menuPublicationPlatDate permettant de préciser la date de publication d'une donnée et de la distinguer de la date de dernière modification
* mise à jour des fichiers exemples

## 0.4

* ajout du champ restaurantConvive permettant de renseigner le type de convives dans le restaurant collectif
* correction d'erreur de frappe
* mise à jour des fichiers exemples

## 0.3

* ajout du champ restaurantNombreConvive permettant de renseigner le nombre (approximatif) de convives dans le restaurant collectif
* correction d'erreur de frappe
* harmonisation dans l'utilisation des minuscules dans les listes de valeurs autorisées
* ajout de la valeur "petit-déjeuner" dans la liste des types de repas
* mise à jour des fichiers exemples

## 0.2

* ajout d'une distinction entre les signe de qualité et les labels
* ajout d'un identifiant pour les restaurant
* changement du champ menuRegimePlat en menuCategoriePlat à la sémantique plus large
* ajout des champs menuModificationDate et menuModificationActivite pour la traçabilité des modifications
* ajout des sources réglementaires
* mise à jour de l'exemple de fichier valide

## 0.1

Création à partir des exemples de fichiers publiés et de discussion avec des représentant des collectivités locales.